# okane

./: .gitignore  Cargo.toml  README.md  clippy.toml  config.example.toml
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  server.rs  types.rs
crates/api/src/middleware/: auth.rs  mod.rs  timer.rs
crates/api/src/routes/: account.rs  admin.rs  auth.rs  backtest.rs  market.rs  mod.rs  notify.rs  strategy.rs  trade.rs  watchlist.rs
crates/api/tests/: api_detailed_test.rs  api_workflow_test.rs  auth_security_test.rs  business_flows.rs  logout_test.rs  rest_api.rs  robustness.rs  security_audit.rs  session_strategy_test.rs  system_lifecycle.rs  websocket_test.rs
crates/api/tests/common/: mod.rs
crates/app/: Cargo.toml
crates/app/src/: backtest.rs  main.rs
crates/cache/: Cargo.toml
crates/cache/src/: mem.rs
crates/cache/tests/: cache_tests.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  test_utils.rs
crates/core/src/cache/: error.rs  port.rs
crates/core/src/common/: mod.rs  time.rs
crates/core/src/engine/: entity.rs  error.rs  port.rs
crates/core/src/market/: entity.rs  error.rs  indicator.rs  mod.rs  port.rs
crates/core/src/notify/: error.rs  port.rs
crates/core/src/store/: error.rs  port.rs
crates/core/src/strategy/: entity.rs  mod.rs  port.rs
crates/core/src/trade/: entity.rs  port.rs
crates/engine/: Cargo.toml
crates/engine/src/: backtest.rs  bridge.rs  factory.rs  lib.rs  quickjs.rs  runtime.rs  wasm.rs
crates/engine/tests/: backtest_integration.rs  engine_integration.rs  host_api_integration.rs  js_example_integration.rs  mock_trade.rs  wasm_integration.rs
crates/feed/: Cargo.toml
crates/feed/src/: yahoo.rs
crates/feed/tests/: yahoo_integration.rs
crates/manager/: Cargo.toml
crates/manager/src/: backtest.rs  lib.rs  strategy.rs
crates/manager/tests/: common.rs  integration.rs  mock_trade.rs
crates/market/: Cargo.toml
crates/market/src/: buffer.rs  history.rs  indicator.rs  lib.rs  manager.rs  stock.rs
crates/market/tests/: market_integration.rs  real_feed_integration.rs
crates/notify/: Cargo.toml
crates/notify/src/: email.rs  factory.rs  lib.rs  telegram.rs
crates/notify/tests/: notification_tests.rs
crates/store/: Cargo.toml
crates/store/src/: account.rs  config.rs  lib.rs  market.rs  pending_order.rs  pending_order_sqlx.rs  strategy.rs  system.rs
crates/store/tests/: account_integration.rs  integration_tests.rs
crates/trade/: Cargo.toml
crates/trade/src/: account.rs  algo.rs  lib.rs  matcher.rs  router.rs  service.rs  trade_log.rs
crates/trade/tests/: service_tests.rs
docs/: architecture.md  conventions.md  product.md  strategy-design.md
examples/js-strategy-demo/: strategy.js
examples/strategy-dummy/: Cargo.toml
examples/strategy-dummy/src/: logic.rs
examples/strategy-host-test/: Cargo.toml
examples/strategy-host-test/src/: logic.rs
