[package]
name = "okane-api"
version = "0.1.0"
edition = "2024"
description = "Okane 量化交易引擎的 HTTP/REST API 网关层，提供 Swagger UI 自文档化接口"
authors = ["moexco <34889451+moexco@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/moexco/okane_engine"
rust-version = "1.85"
keywords = ["quantitative", "trading", "api", "axum", "openapi"]
categories = ["web-programming::http-server"]
publish = false

[dependencies]
# --- Web 框架 ---
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }

# --- OpenAPI / Swagger ---
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# --- 序列化 ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- 鉴权 ---
jsonwebtoken = "9"

# --- 日志 ---
tracing = "0.1"

# --- 项目内部依赖 ---
okane-core = { version = "0.1.0", path = "../core" }
okane-manager = { version = "0.1.0", path = "../manager" }
okane-trade = { version = "0.1.0", path = "../trade" }

# --- 金融精度 ---
rust_decimal = { version = "1", features = ["serde-with-str"] }

# --- 错误处理 ---
thiserror = "2"
bcrypt = "0.18.0"
chrono = "0.4.44"

[dev-dependencies]
okane-engine = { path = "../engine" }
okane-feed = { path = "../feed" }
okane-market = { path = "../market" }
okane-store = { path = "../store" }
okane-trade = { path = "../trade" }
reqwest = { version = "0.13.2", features = ["json"] }
tempfile = "3.26.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
