[package]
name = "okane-app"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15.19"
okane-api = { version = "0.1.0", path = "../api" }
okane-core = { version = "0.1.0", path = "../core" }
okane-engine = { version = "0.1.0", path = "../engine" }
okane-feed = { version = "0.1.0", path = "../feed" }
okane-manager = { version = "0.1.0", path = "../manager" }
okane-market = { version = "0.1.0", path = "../market" }
okane-store = { version = "0.1.0", path = "../store" }
okane-trade = { version = "0.1.0", path = "../trade" }
rust_decimal = "1.40.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
