[package]
name = "okane-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3.31"
rust_decimal = { version = "1.40.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
