[package]
name = "okane-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3.31"
rust_decimal = { version = "1.40.0", features = ["serde", "serde-float"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"
utoipa = { version = "5", features = ["chrono", "decimal"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }

# Test Utils optional dependencies
tokio = { version = "1.43.0", features = ["sync", "rt"], optional = true }
async-stream = { version = "0.3.6", optional = true }
dashmap = { version = "6.1.0", optional = true }
uuid = { version = "1.12.1", features = ["v4"], optional = true }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }

[features]
default = []
test-utils = ["tokio", "async-stream", "dashmap", "uuid"]
