[package]
name = "okane-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.43"
extism = "1.13.0"
futures = "0.3.31"
okane-core = { version = "0.1.0", path = "../core" }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["sync", "rt", "time", "macros"] }
tracing = "0.1.44"
uuid = { version = "1.20.0", features = ["v4"] }

[dev-dependencies]
async-stream = "0.3.6"
