[package]
name = "okane-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.43"
futures = "0.3.31"
okane-core = { version = "0.1.0", path = "../core" }
rquickjs = { version = "0.11.0", features = ["futures", "bindgen"] }
rust_decimal = "1.40.0"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["sync", "rt", "time", "macros"] }
tracing = "0.1.44"
uuid = { version = "1.20.0", features = ["v4"] }
wasmtime = { version = "41.0.3", features = ["async"] }

[dev-dependencies]
async-stream = "0.3.6"
