[package]
name = "okane-feed"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3.31"
okane-core = { version = "0.1.0", path = "../core" }
reqwest = { version = "0.13.1", features = ["json", "query", "rustls-native-certs"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-stream = "0.1.18"
