[package]
name = "okane-feed"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
futures = "0.3.31"
okane-core = { version = "0.1.0", path = "../core" }
reqwest = { version = "0.13.2", features = ["default", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-stream = "0.1.18"
rust_decimal = "1.40.0"
[dev-dependencies]
rust_decimal_macros = "1.40.0"
anyhow = "1.0.95"
serde_json = "1.0"
