[package]
name = "okane-market"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
chrono = "0.4.43"
dashmap = "6.1.0"
futures = "0.3.31"
okane-cache = { version = "0.1.0", path = "../cache" }
okane-core = { version = "0.1.0", path = "../core" }
okane-store = { version = "0.1.0", path = "../store" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["sync", "rt", "time", "macros"] }
tracing = "0.1.44"

[dev-dependencies]
okane-feed = { path = "../feed" }
