[package]
name = "okane-notify"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-rustls", "ring", "webpki-roots", "builder", "smtp-transport", "hostname"], default-features = false }
okane-core = { version = "0.1.0", path = "../core" }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls-no-provider"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
anyhow = "1.0.102"
dotenvy = "0.15.7"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
