[package]
name = "okane-store"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.89"
bcrypt = "0.18.0"
chrono = { version = "0.4.43", features = ["serde"] }
dashmap = "6.1.0"
okane-core = { version = "0.1.0", path = "../core" }
rust_decimal = "1.40.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "rust_decimal"] }
tracing = "0.1.44"
uuid = { version = "1.21.0", features = ["v4"] }
tokio = { version = "1.49.0", features = ["sync", "macros", "rt-multi-thread"] }
serde_json = "1.0.149"

[dev-dependencies]
anyhow = "1.0.95"
rust_decimal_macros = "1.40.0"
tempfile = "3.24.0"
